# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,8 @@ import healthRouter from "./health";
 import tracksRouter from "./tracks";
 import poemsRouter from "./poems";
 import galleryRouter from "./gallery";
+import touchRouter from "./touch";
+import senseRouter from "./sense";
 import adminAuthRouter from "./admin-auth";
 import uploadRouter from "./upload";
 import activityRouter from "./activity";
@@ -15,6 +17,8 @@ router.use(uploadRouter);
 router.use(tracksRouter);
 router.use(poemsRouter);
 router.use(galleryRouter);
+router.use(touchRouter);
+router.use(senseRouter);
 router.use(activityRouter);
 
 export default router;
