# lib/db/src/schema/index.ts
@@ -2,3 +2,5 @@ export * from "./tracks";
 export * from "./poems";
 export * from "./gallery";
 export * from "./activity-log";
+export * from "./touch";
+export * from "./sense";
